--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+numpy==1.21.0
+Pillow==8.3.0
+six==1.16.0
+torch==1.9.0
 torchvision==0.2.2
-pillow==8.3.0
-
+tqdm==4.19.9
+typing-extensions==3.10.0.0
